# bunnyland-3d

./: .dockerignore  .gitignore  Dockerfile.server  Dockerfile.web  README.md  package.json
.github/workflows/: ci.yml
docs/: out-of-tree-plugins.md
docs/admin/: 3d-admin.md
docs/player/: 3d-client.md
scripts/: test-server  test-web
server/: README.md  pyproject.toml
server/src/bunnyland_3d/: __init__.py  api.py  assets.py  collision.py  components.py  core_visuals.py  decorations.py  effects.py  enrichment.py  entity_effects.py  plugin.py  projection.py  systems.py  visuals.py
server/tests/: conftest.py  test_assets.py  test_collision.py  test_effects.py  test_entity_effects.py  test_plugin.py  test_room_decorations.py  test_visuals.py
web/: Dockerfile  admin.html  index.html  package-lock.json  package.json  player.html  tsconfig.json  vite.config.ts
web/public/assets/3d/: ASSET-LICENSES.md  avatar-leporid.gltf  manifest.json  prop-generic.gltf  prop-lantern.gltf
web/scripts/: check-bundle.mjs  generate-3d-assets.mjs  playwright-itch-screenshots  playwright-world-3d
web/src/: adapter.d.mts  adapter.mjs  admin-controller.tsx  api.ts  canvas-loading.css  canvas-loading.tsx  canvas-progress.ts  content-warning.ts  gltf-assets.ts  main.ts  main.tsx  play.ts  player-controller.tsx  player-scene.ts  player.ts  player.tsx  scene.ts  ui-globals.d.ts  welcome.ts  welcome.tsx
web/test/: adapter.test.mjs  assets.test.mjs
