[project]
name = "bunnyland-3d"
version = "0.3.0"
description = "Out-of-tree Bunnyland 3D presentation, movement, and collision plugin."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bunnyland[server]>=0.2.0",
    "pydantic>=2.0",
    "relics",
    "trimesh==4.12.2",
]

[project.entry-points."bunnyland.plugins"]
"bunnyland.3d" = "bunnyland_3d.plugin:bunnyland_plugins"

[dependency-groups]
dev = [
    "httpx2>=0.28.1",
    "pytest>=8.0",
]

[tool.uv.sources]
bunnyland = { git = "https://github.com/thalismind/bunnyland-server.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnyland_3d"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
